<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Youth Group</string>
    <string name="action_settings">Settings</string>
    <string name="about_us">About Us</string>
    <string name="alerts">Alerts</string>
    <string name="ten_and_tens">10X10s</string>
    <string name="events">Events</string>
    <string name="title_activity_about_us">About Us</string>
    <string name="about_us_paragraph">Unhindered Student Ministries is a ministry of Jasonville Assembly of God. \n
        \nAs a student oriented church we have 3 Goals. \n
        \nQuality - We believe that we (as individuals) can really make a difference in our world and in the lives of other people. \n
        \nCommunity - We know that community is important for us (as individuals) to grow and mature. \n
        \nLove - Love is the very core of who God is and how He approaches us.</string>
    <string name="aboutUsTitle">Who We Are</string>
    <string name="pastorRyan">Pastor Ryan</string>
    <string name="pastorMichelle">Pastor Michelle</string>
    <string name="what_we_believe_paragraph">We believe in the redeaming love of Jesus Christ. We believe that Jesus is the Son of God and that he came to Earth, living a sinless life, and died on the cross for our sins.</string>
    <string name="what_we_believe_title_text">What We Believe</string>
    <string name="how_to_connect_title_text">How To Connect</string>
    <string name="how_to_connect_text">You can connect to Unhindered by joining us on Wednesdays from 7 - 8 p.m. or Sundays from either 9:30 a.m. - 12 p.m. or 6:30 - 8 p.m. \n \nYou can also like us on Facebook, follow us on Twitter and Instagram, and add our Unhindered Jams And Worship playlist on Spotifiy. \n \nWe hope to connect with you soon!</string>
    <string name="title_activity_announcements">Announcements</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_events">EventsActivity</string>
    <string name="title_activity_ten_by_ten">TenByTenActivity</string>
    <string name="daily_reading_title">Daily Scripture Reading:</string>
    <string name="sync">Sync</string>
    <string name="daily_reading">Loading....</string>
    <string name="emailAddressForPastorRyan">pastorforgey@gmail.com</string>
    <string name="change">trying to get the cahnges to push</string>
    <string name="emailAddressForPastorMichelle">pastorforgey@gmail.com</string>
    <string name="loading_events">Loading Events</string>
    <string name="please_wait">Please Wait</string>
    <string name="loading_announcements">Loading Announcements</string>
    <string name="widget_button_description">Widget Item Button</string>
    <string name="unhindered">Unhindered Student Ministries</string>
    <string name="announcements">Announcements</string>
    <string name="widget_logo_description">Unhindered Logo</string>
    <string name="title_heading">Title:</string>
    <string name="event_name_heading">Event:</string>
    <string name="event_title_holder">event title</string>
    <string name="event_date_heading">Date:</string>
    <string name="event_date_holder">event date</string>
    <string name="event_description_holder">event description</string>
    <string name="description_heading">Description:</string>
    <string name="announcement_description_holder">announcement description</string>
    <string name="announcement_title_holder">announcement title</string>
    <string name="announcement_title_header">Announcement:</string>

</resources>
