<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="church_application.rose_hulman.edu.churchapplication.AboutUsActivity">

    <TextView
        android:id="@+id/who_we_are_title"
        android:text="@string/aboutUsTitle"
        android:textSize="25sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/about_us"
        android:text="@string/about_us_paragraph"
        android:layout_below="@id/who_we_are_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp" />

    <TableLayout
        android:id="@+id/contact_table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/about_us">

        <TableRow>

            <ImageButton android:background="@android:drawable/ic_menu_crop" />

            <TextView android:text="@string/pastorRyan" android:padding="10dp"/>

            <ImageButton android:background="@android:drawable/sym_action_email" android:id="@+id/contact_Pastor_Ryan_Button"/>
        </TableRow>

        <TableRow>

            <ImageButton android:background="@android:drawable/ic_menu_crop" />

            <TextView android:text="@string/pastorMichelle" android:padding="10dp" />

            <ImageButton android:background="@android:drawable/sym_action_email" android:id="@+id/contact_Pastor_Michelle_Button"/>
        </TableRow>
    </TableLayout>
    <TextView
        android:id="@+id/what_we_believe_title"
        android:layout_below="@+id/contact_table"
        android:text="@string/what_we_believe_title_text"
        android:textSize="25sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/what_we_believe_paragraph"
        android:text="@string/what_we_believe_paragraph"
        android:layout_below="@id/what_we_believe_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp" />
    <TextView
        android:id="@+id/how_to_connect_title"
        android:layout_below="@+id/what_we_believe_paragraph"
        android:text="@string/how_to_connect_title_text"
        android:textSize="25sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/how_to_connect_paragraph"
        android:text="@string/how_to_connect_text"
        android:layout_below="@id/how_to_connect_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp" />
    <!---->
    <!--<ImageView-->
    <!--android:id="@+id/about_us_image"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:background="@drawable/youth_group"/>-->



</RelativeLayout>
